infrastructure/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-api
  template:
    metadata:
      labels:
        app: fraud-api
    spec:
      volumes:
        - name: model-storage
          emptyDir: {}
      
      containers:
        - name: fraud-api
          image: ghcr.io/erbaltazar/fraud-detection-mlops:latest 
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: model-storage
              mountPath: /app/models
