infrastructure/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-api-service
spec:
  type: ClusterIP
  selector:
    app: fraud-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
